2019-06-29 (v4.5.0):
- Updated README.
- Renamed FileOnlyChannel to MediaOnlyChannel.
- MediaOnlyChannels now allow images, videos, audio files, youtube videos, soundcloud urls and links to images or videos (direct link only).
- On setting up MediaOnlyChannels, the channel description will no longer be changed.
- Any feature except bot owners and JDA utilties standard ones can be toggled.
- Default toggle values are in the toggle.ini file.
- Guilds can now set a custom timezone offset. (from UTC)
- Servant now checks database connection on boot.
- Any command has a detailed help on using that command without any arguments.

2019-06-11 (v4.4.0):
- Added Member Join / Leave Notifications.
- Added database structure.

2019-06-09 (v4.3.1):
- Fixed level formula.
- Added toggle command. (Only level feature yet -> Default: off)

2019-06-07 (v4.3.0):
- Added "StealAvatar"-command.
- Added coin flip command.
- Added feature counters for future statistics (user and guild).
- Added level feature. (LevelCommand, related db tables, LevelListener)
- Added autorole feature. ((Un)setting role, automatically receiving role)
- Added file only channel feature. (Set up channels in which users only can post links and files)

2019-06-04 (v4.2.0):
- Added "AddGif"-command for easy interaction gif management.
- Added clear command to delete messages.
- Removed command editing cooldown.

2019-06-04 (v4.1.0):
- Added interaction commands. (Beg, Cookie, Dab, Highfive, Hug, Kiss, Pat, Slap)
- Added abtract class for interaction commands.
- Added user setting (color) command.
- Added database connection.
- Added interaction counter on database.
- Added user setting (color) on database.
- Added table for interaction gifs.
- Added table for custom emotes. (Not yet supported)
- Added Log class for easy error handling.
- Added parser class. Currently parses only color codes.
- Turned static user class into instance class.

2019-06-03 (v4.0.0):
- Bot set up.
- Bot connecting to Discord.